--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<td>课程</td>
 		</tr>
 	</table>
-	<a href='www.baidu.com'>百度一下</a>
+	<a href='http://www.baidu.com'>百度一下</a>
 	
 </body>
 </html>
