--- a/index.html
+++ b/index.html
@@ -12,16 +12,7 @@
 
 	<h1>中国你好！</h1>
 	<table>
-		<tr>
-			<td>课程1</td>
-			<td>课程2</td>
-			<td>课程3</td>
-		</tr>
-		<tr>
-			<td>课程4</td>
-			<td>课程5</td>
-			<td>课程6</td>
-		</tr>
+		<P class="mb-5">It is my first time use this function. Thank you for visiting my site!</P>
 	</table>
 	<a href='https://www.baidu.com'>百度一下</a>
 	
